# RNAHeliCes

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  SUBMIT  ScoreScheme.ini  TODO  aclocal.m4  configure  configure.ac  deps  hishapes_ambiguous.gap  hishapes_unambiguous.gap  libtool
HiKinetics/: .fasta.tmp  .nfs000000001b780aa70000000a  .nfs000000001b780aaa00000009  .sss  0_generate_hishapes.pl  1_add_partition_openchain_to_res.pl  2_generate_faa.rb  3_generate_hipath.pl  4_hipath_generate_dat_plt.rb  COPYING  HiKinetics.rb  README  options_HiKinetics.rb
HiKinetics/Input/: c_di_GMP_riboswitch.seq
HiKinetics/Treekin-0.3.1_hi/: Makefile  Makefile.am  Makefile.in  barparser.c  calc.c  config.h  config.h.in  config.status  configure  configure.ac  globals.c  main.c  treekin.ggo  treekin_cmdline.c  treekin_cmdline.h
HiKinetics/Treekin-0.3.1_hi/.deps/: barparser.Po  calc.Po  exp_matrix.Po  globals.Po  main.Po  mxccm.Po  treekin_cmdline.Po
HiKinetics/Treekin-0.3.1_hi/autom4te.cache/: output.1  traces.0  traces.1
autom4te.cache/: output.0  requests  traces.0  traces.1
examples/: HDV.faa  HIV-1_leader.faa  Makefile.am  Makefile.in  README  SL.faa  alpha_operon.faa  alternating_rna.faa  alternating_rna.hip  amv.faa  attenuator.faa  collosoma_slrna.fa  dsrA.faa  hok.faa  ires_picornaviridae.fa  ms2.faa  pharaonis.seq  rb1.faa  rb2.faa  rb3.faa  rb4.faa  rb5.faa  ribD_leader.faa  riboswitches.faa  riboswitches.fas  s15.faa  sbox_leader.faa  switch_33nt.seq  switches_4.faa  thiM_leader.faa  xbix.fa  xbix.hi  xbix.ss  xbix.sss
src/: LibChangeLog  Makefile.am  Makefile.in  ShowTree  ShowTree.opt.rb  config.h.in  config.h.in~  filter_add.hh  hipath.cc  hishape_filter.hh  hishapeb_mfeV4_pp.cc  hishapeb_mfeV4_pp.hh  hishapeb_mfe_pfx.cc  hishapeb_mfe_pfx.hh  hishapeb_mfe_pp.cc  hishapeb_mfe_pp.hh  hishapeh_mfeV4_pp.cc  hishapeh_mfeV4_pp.hh  hishapeh_mfe_pfx.cc  hishapeh_mfe_pfx.hh  hishapeh_mfe_pp.cc  hishapeh_mfe_pp.hh  hishapehplus_mfeV4_pp.cc  hishapehplus_mfeV4_pp.hh  hishapehplus_mfe_pfx.cc  hishapehplus_mfe_pfx.hh  hishapehplus_mfe_pp.cc  hishapehplus_mfe_pp.hh  hishapem_mfeV4_pp.cc  hishapem_mfeV4_pp.hh  hishapem_mfe_pfx.cc  hishapem_mfe_pfx.hh  hishapem_mfe_pp.cc  hishapem_mfe_pp.hh  hited.cc  hited_util.cc  hited_util.hh  main.cc  mfe_answer.hh  mfe_answer_v4.hh  (+3 more)
src/comp/: Algorithm.cpp  Algorithm.hpp  Aligner.cpp  Aligner.hpp  BioCPP.cpp  BioCPP.hpp  BioExceptions.hpp  DebugTools.hpp  HelixIndex.cpp  HelixIndex.hpp  Hishape.cpp  Hishape.hpp  Loader.hpp  Makefile.am  Makefile.in  NAPrimaryStructure.cpp  NAPrimaryStructure.hpp  NASSDotBracketLoader.hpp  NASecondaryStructure.cpp  NASecondaryStructure.hpp  NucleotidePair.cpp  NucleotidePair.hpp  PairAligner.cpp  PairAligner.hpp  ScoreScheme.cpp  ScoreScheme.hpp  ShapiroAligner.cpp  ShapiroAligner.hpp  TreeNode.hpp
src/librna/: Makefile.am  Makefile.in  rnalib.c  rnalib.h
src/libs/: Makefile.am  Makefile.in
src/rtlib/: Makefile.am  Makefile.in  adp.hh  backtrack.hh  empty.hh  generic_opts.hh  hashlist.hh  hashtng.hh  list.hh  push_back.hh  range.hh  rational.hh  rna.hh  rope.hh  sequence.hh  shape.hh  string.hh  subopt.hh  subsequence.hh  table.hh  terminal.hh  treelist.hh
