EXTRA_DIST = collosoma_slrna.seq spliced_leader.seq switch_33nt.seq riboswitches.faa switches_4.faa riboswitches.fas ires_picornaviridae.fa collosoma_slrna.fa xbix.fa xbix.ss xbix.sss xbix.seq xbix.hi pharaonis.seq tRNA_phe.seq alpha_operon.faa amv.faa attenuator.faa dsrA.faa HDV.faa HIV-1_leader.faa hok.faa ms2.faa rb1.faa rb2.faa rb3.faa rb4.faa rb5.faa ribD_leader.faa s15.faa sbox_leader.faa SL.faa thiM_leader.faa alternating_rna.faa alternating_rna.hip
