# CC = g++  -std=gnu++0x -Wno-deprecated
# CCOPT = -o3

#
SUBDIRS = librna rtlib libs comp
# 

# -std=gnu99          mfe_2  hishapehV5_2 hishapehV5_mfe_2    hishapehV5_mfe_kbest_2      RNAHeliCes   HiKi    HiKinetics  RNALocMin    HiEAPath    BFSPath
bin_PROGRAMS =    RNAHeliCes HiPath HiTed
# -std=gnu++0x -Wno-deprecated 
AM_CPPFLAGS = -I$(srcdir)/rtlib -I$(srcdir)/librna -I$(srcdir)/comp



# hishapehV5_2_SOURCES = hishapehV5_2.cc hishapehV5_2.hh hishapehV5_2_main.cc \
# rtlib/adp.hh rtlib/asymptotics.hh rtlib/bigint.hh rtlib/erase.hh rtlib/hashlist.hh rtlib/pool.hh rtlib/rna.hh rtlib/shape.hh rtlib/subsequence.hh \
# rtlib/bitops.hh   rtlib/filter.hh        rtlib/hash_stats.hh  rtlib/map_pool.hh   rtlib/push_back.hh  rtlib/rope.hh        rtlib/table.hh \
# rtlib/cm_alph.hh  rtlib/hashtng.hh     rtlib/move.hh       rtlib/range.hh      rtlib/sample.hh      rtlib/string.cc     rtlib/terminal.hh \
# rtlib/backtrack.hh    rtlib/cstr.h      rtlib/generic_opts.hh  rtlib/multipool.hh  rtlib/rational.hh   rtlib/sequence.hh    rtlib/string.hh     rtlib/treelist.hh \
# rtlib/bench.hh        rtlib/empty.hh    rtlib/hash.hh          rtlib/list.hh        rtlib/output.hh     rtlib/ref.hh        rtlib/shape_alph.hh  rtlib/subopt.hh     rtlib/vector_sparse.hh
# hishapehV5_2_CPPFLAGS = $(AM_CPPFLAGS)
# hishapehV5_2_LDADD = librna/librna.la
# 
# mfe_2_SOURCES = mfe_2.cc mfe_2.hh mfe_2_main.cc \
# rtlib/adp.hh rtlib/asymptotics.hh rtlib/bigint.hh rtlib/erase.hh rtlib/hashlist.hh rtlib/pool.hh rtlib/rna.hh rtlib/shape.hh rtlib/subsequence.hh \
# rtlib/bitops.hh   rtlib/filter.hh        rtlib/hash_stats.hh  rtlib/map_pool.hh   rtlib/push_back.hh  rtlib/rope.hh        rtlib/table.hh \
# rtlib/cm_alph.hh  rtlib/hashtng.hh     rtlib/move.hh       rtlib/range.hh      rtlib/sample.hh      rtlib/string.cc     rtlib/terminal.hh \
# rtlib/backtrack.hh    rtlib/cstr.h      rtlib/generic_opts.hh  rtlib/multipool.hh  rtlib/rational.hh   rtlib/sequence.hh    rtlib/string.hh     rtlib/treelist.hh \
# rtlib/bench.hh        rtlib/empty.hh    rtlib/hash.hh          rtlib/list.hh        rtlib/output.hh     rtlib/ref.hh        rtlib/shape_alph.hh  rtlib/subopt.hh     rtlib/vector_sparse.hh
# mfe_2_CPPFLAGS = $(AM_CPPFLAGS)
# mfe_2_LDADD = librna/librna.la
# 
# hishapehV5_mfe_2_SOURCES = hishapehV5_mfe_2.cc hishapehV5_mfe_2.hh hishapehV5_mfe_2_main.cc \
# rtlib/adp.hh rtlib/asymptotics.hh rtlib/bigint.hh rtlib/erase.hh rtlib/hashlist.hh rtlib/pool.hh rtlib/rna.hh rtlib/shape.hh rtlib/subsequence.hh \
# rtlib/bitops.hh   rtlib/filter.hh        rtlib/hash_stats.hh  rtlib/map_pool.hh   rtlib/push_back.hh  rtlib/rope.hh        rtlib/table.hh \
# rtlib/cm_alph.hh  rtlib/hashtng.hh     rtlib/move.hh       rtlib/range.hh      rtlib/sample.hh      rtlib/string.cc     rtlib/terminal.hh \
# rtlib/backtrack.hh    rtlib/cstr.h      rtlib/generic_opts.hh  rtlib/multipool.hh  rtlib/rational.hh   rtlib/sequence.hh    rtlib/string.hh     rtlib/treelist.hh \
# rtlib/bench.hh        rtlib/empty.hh    rtlib/hash.hh          rtlib/list.hh        rtlib/output.hh     rtlib/ref.hh        rtlib/shape_alph.hh  rtlib/subopt.hh     rtlib/vector_sparse.hh
# hishapehV5_mfe_2_CPPFLAGS = $(AM_CPPFLAGS)
# hishapehV5_mfe_2_LDADD = librna/librna.la
# 
# hishapehV5_mfe_kbest_2_SOURCES = hishapehV5_mfe_kbest_2.cc hishapehV5_mfe_kbest_2.hh hishapehV5_mfe_kbest_2_main.cc hishape_answer_v5.hh \
# rtlib/adp.hh rtlib/asymptotics.hh rtlib/bigint.hh rtlib/erase.hh rtlib/hashlist.hh rtlib/pool.hh rtlib/rna.hh rtlib/shape.hh rtlib/subsequence.hh \
# rtlib/bitops.hh   rtlib/filter.hh        rtlib/hash_stats.hh  rtlib/map_pool.hh   rtlib/push_back.hh  rtlib/rope.hh        rtlib/table.hh \
# rtlib/cm_alph.hh  rtlib/hashtng.hh     rtlib/move.hh       rtlib/range.hh      rtlib/sample.hh      rtlib/string.cc     rtlib/terminal.hh \
# rtlib/backtrack.hh    rtlib/cstr.h      rtlib/generic_opts.hh  rtlib/multipool.hh  rtlib/rational.hh   rtlib/sequence.hh    rtlib/string.hh     rtlib/treelist.hh \
# rtlib/bench.hh        rtlib/empty.hh    rtlib/hash.hh          rtlib/list.hh        rtlib/output.hh     rtlib/ref.hh        rtlib/shape_alph.hh  rtlib/subopt.hh     rtlib/vector_sparse.hh
# hishapehV5_mfe_kbest_2_CPPFLAGS = $(AM_CPPFLAGS)
# hishapehV5_mfe_kbest_2_LDADD = librna/librna.la




# # pp_hishapeh_2.hh pp_hishapeh_2.cc
# HiKi_SOURCES = hiki_2.cc \
#                      hishapeb_mfe_pp.cc hishapeb_mfe_pp.hh \
#                      ell/tp/LandscapeTopology.hh \
#                      ell/tp/MinimaSet.hh ell/tp/MinimaSet.cc \
#                      ell/fromString.hh ell/fromString.cc
# ## the object in hiki have to be fitted: hishapehV5_2.hh hishapehV5_2.cc hishape_answer_v5.hh
# HiKi_CPPFLAGS = $(AM_CPPFLAGS)
# #  -lRNA 
# HiKi_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) -lell -lbiu
# # if link firstly with libRNA.a, it is the 1999 version, if lastly is 2004 version
# HiKi_LDADD =   librna/librna.la  rtlib/rtlib.la   $(srcdir)/libs/libRNA.a 
# # 


# import filter_add
# import mfe_answer
# import mfe_answer_v4
# import pf_answer
# import hishape_filter

# p_func.cc p_func.hh
#                     kinetic_hishapem_mfe_pp.cc kinetic_hishapem_mfe_pp.hh
RNAHeliCes_SOURCES = main.cc filter_add.hh \
                     mfe_answer_v4.hh hishape_filter.hh \
                     hishapeh_mfeV4_pp.cc hishapeh_mfeV4_pp.hh \
                     hishapehplus_mfeV4_pp.cc hishapehplus_mfeV4_pp.hh \
                     hishapem_mfeV4_pp.cc hishapem_mfeV4_pp.hh \
                     hishapeb_mfeV4_pp.cc hishapeb_mfeV4_pp.hh \
                     pf_answer.hh pf_filter.hh mfe_answer.hh p_func.cc p_func.hh \
                     hishapeh_mfe_pfx.cc hishapeh_mfe_pfx.hh \
                     hishapehplus_mfe_pfx.cc hishapehplus_mfe_pfx.hh \
                     hishapem_mfe_pfx.cc hishapem_mfe_pfx.hh \
                     hishapeb_mfe_pfx.cc hishapeb_mfe_pfx.hh
#                     RNAStack.cc Turner.cc clusterRS.cc Util.cc ComputeE.cc RNAStackFold.cc neighborjoin.cc neighborjoin.hh Turner.hh RNAStack.hh RNAStackFold.hh clusterRS.hh readConfig.cc
                     
                     
#-I$(srcdir)/librna
RNAHeliCes_CPPFLAGS = $(BOOST_CPPFLAGS) $(AM_CPPFLAGS)
# -L./librna
RNAHeliCes_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
# -lrna
RNAHeliCes_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) librna/librna.la rtlib/rtlib.la comp/comp.la



#Hipath_SOURCES = hipath_main.c findpath.h fold.h fold_vars.h utils.h
##AM_CFLAGS =                                                      #  something here will be used during all phases 
##  something here will be used only during linkage phase
#Hipath_LDADD = $(srcdir)/libs/libRNA.a -lm                    

#Hipath_all_SOURCES = hipath_all.c findpath.h fold.h fold_vars.h utils.h
#Hipath_all_LDADD = $(srcdir)/libs/libRNA.a -lm



# $(srcdir)/libs/libRNA.a is only used for HiPath calculation
HiPath_SOURCES = hipath.cc hited_util.hh hited_util.cc mfe_answer.hh \
                     hishapeh_mfe_pp.cc hishapeh_mfe_pp.hh \
                     hishapehplus_mfe_pp.cc hishapehplus_mfe_pp.hh \
                     hishapem_mfe_pp.cc hishapem_mfe_pp.hh \
                     hishapeb_mfe_pp.cc hishapeb_mfe_pp.hh
#   -I$(srcdir)/librna1999 -DTURNER1999 -ggdb
HiPath_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(srcdir)/rtlib -I$(srcdir)/librna
HiPath_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
# $(srcdir)/libs/libRNA.a because of BFS     -L/home/jhuang/gapc/lib  -lrna
HiPath_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(srcdir)/libs/libRNA.a librna/librna.la rtlib/rtlib.la comp/comp.la -lm




#BFSPath_SOURCES = bfspath.cc mfe_answer.hh \
#                     hishapeh_mfe_pp.cc hishapeh_mfe_pp.hh \
#                     hishapehplus_mfe_pp.cc hishapehplus_mfe_pp.hh \
#                     hishapem_mfe_pp.cc hishapem_mfe_pp.hh \
#                     hishapeb_mfe_pp.cc hishapeb_mfe_pp.hh
#BFSPath_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(srcdir)/rtlib -I$(srcdir)/librna
#BFSPath_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
#BFSPath_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(srcdir)/libs/libRNA.a librna/librna.la rtlib/rtlib.la



HiTed_SOURCES = hited_util.hh hited_util.cc hited.cc
HiTed_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(srcdir)/comp
HiTed_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
HiTed_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) comp/comp.la




# RNALocMin_SOURCES = rnalocmin.cc \
#                      prettyUnique_mfe_microstate.cc prettyUnique_mfe_microstate.hh
# RNALocMin_CPPFLAGS = $(BOOST_CPPFLAGS) $(AM_CPPFLAGS)
# RNALocMin_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
# RNALocMin_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) librna/librna.la rtlib/rtlib.la
# 
# 
# RNALocMin_SOURCES = rnalocmin.cc \
#                      prettyUnique_mfe_microstate.cc prettyUnique_mfe_microstate.hh
# RNALocMin_CPPFLAGS = $(BOOST_CPPFLAGS) $(AM_CPPFLAGS)
# RNALocMin_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
# RNALocMin_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) librna/librna.la rtlib/rtlib.la




# HiEAPath_SOURCES = hieapath.cc RPath.cc RPath.hh search.cc




# # mfe_answer_v4.hh hishape_answer_v4.hh 
# # $(srcdir)/libs/libRNA.a is only used for HiKinetics calculation
# HiKinetics_SOURCES = hikinetics.cc mfe_answer.hh hishape_filter.hh filter_add.hh\
#                      hishapeh_mfe_pp.cc hishapeh_mfe_pp.hh\
#                      hishapehplus_mfe_pp.cc hishapehplus_mfe_pp.hh\
#                      hishapem_mfe_pp.cc hishapem_mfe_pp.hh\
#                      hishapeb_mfe_pp.cc hishapeb_mfe_pp.hh\
#                      treekin/calc.c        treekin/calc.h\
#                      treekin/mxccm.c       treekin/mxccm.h\
#                      treekin/barparser.c   treekin/barparser.h\
#                      treekin/exp_matrix.c  treekin/exp_matrix.h  treekin/globals.h
# #   -I$(srcdir)/librna1999 -DTURNER1999 -ggdb
# HiKinetics_CPPFLAGS = $(BOOST_CPPFLAGS) -I$(srcdir)/rtlib -I$(srcdir)/librna
# HiKinetics_LDFLAGS = $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
# # $(srcdir)/libs/libRNA.a because of BFS     -L/home/jhuang/gapc/lib  -lrna                    # $(srcdir)/libs/liblapack.a $(srcdir)/libs/libblas.a 
# HiKinetics_LDADD = $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(srcdir)/libs/libRNA.a librna/librna.la rtlib/rtlib.la -llapack -lm



#TurnerModel/* Config/* HiKinetics hikinetic_helper0.rb hikinetic_helper1.rb 
EXTRA_DIST = ShowTree ShowTree.opt.rb tree.rb LibChangeLog
# $(srcdir)/TuernerModel/d3E.dat                      $(srcdir)/TuernerModel/SingleMismatchInteriorE.dat            $(srcdir)/TuernerModel/TetraLoopE.dat \
# $(srcdir)/TuernerModel/d5E.dat                      $(srcdir)/TuernerModel/StackingE.dat                          $(srcdir)/TuernerModel/TwoTwoMismatchInteriorE.dat \
# $(srcdir)/TuernerModel/LoopE.dat                    $(srcdir)/TuernerModel/TerminalStackingMismatchHairpinE.dat \
# $(srcdir)/TuernerModel/OneTwoMismatchInteriorE.dat  $(srcdir)/TuernerModel/TerminalStackingMismatchInteriorE.dat \
# $(srcdir)/Config/config  $(srcdir)/Config/config_3_8
