lib_LTLIBRARIES = comp.la
comp_la_SOURCES =  ConvertUTF.c ConvertUTF.h SimpleIni.h \
                     BioCPP.cpp BioCPP.hpp BioExceptions.hpp DebugTools.hpp Loader.hpp NASSDotBracketLoader.hpp \
                     NucleotidePair.cpp NucleotidePair.hpp \
                     NAPrimaryStructure.cpp NAPrimaryStructure.hpp NASecondaryStructure.cpp NASecondaryStructure.hpp \
                     HelixIndex.cpp HelixIndex.hpp TreeNode.hpp Hishape.cpp Hishape.hpp \
                     Algorithm.cpp Algorithm.hpp ScoreScheme.cpp ScoreScheme.hpp \
                     Aligner.cpp Aligner.hpp PairAligner.cpp PairAligner.hpp ShapiroAligner.cpp ShapiroAligner.hpp
comp_la_LDFLAGS = -module -avoid-version
EXTRA_DIST = License.txt