lib_LTLIBRARIES = rtlib.la
rtlib_la_SOURCES = adp.hh asymptotics.hh bigint.hh erase.hh hashlist.hh pool.hh rna.hh shape.hh subsequence.hh \
                   bitops.hh   filter.hh        hash_stats.hh  map_pool.hh   push_back.hh  rope.hh        table.hh \
cm_alph.hh  hashtng.hh     move.hh       range.hh      sample.hh      string.cc     terminal.hh \
backtrack.hh    cstr.h      generic_opts.hh  multipool.hh  rational.hh   sequence.hh    string.hh     treelist.hh \
bench.hh        empty.hh    hash.hh          list.hh        output.hh     ref.hh        shape_alph.hh  subopt.hh     vector_sparse.hh
rtlib_la_LDFLAGS = -module -avoid-version